2.5?
    - Added rename option to Set/clear field dialog, to move contents from one field to another.
    - Added Back and Forward actions, for switching between recently edited BibTeX entries.
    - Added option under "Entry table" to designate fields as numeric for sorting purposes.
    - Added possibility for custom export filters to define their own name formatters.
      This is done by adding a file named "<filtername>.formatters". This file defines
      one formatter on each line, with each line containing the name of the formatter and
      the formatter definition, separated by a colon (:).
    - Added menu items for increasing/decreasing table font size, with shortcut keys Ctrl-plus and
      Ctrl-minus.
    - Columns can now be resized and reordered in the table, and the settings will be saved.
      Table columns interface in Preferences was improved by adding buttons to move columns.
      Patches contributed by Fabian Bieker.
    - Added options to automatically mark entries imported into an existing database, and to unmark
      previously marked entries when importing.
    - Added ":(x)" modifier to key generator, specifying that the arbitrary string x
      should be used as a fallback value if the value returned by the field marker is empty.
    - Added ":upper" modifier to key generator, to force uppercase for a field marker.
    - Added buttons in External programs tab in Preferences for modifying settings for
      "Push to"-features, and removed obsolete fields.
    - Added support for DOI field in Endnote importer.
    - Improved handling of invalid BibTeX keys containing white space. Parser will now try to
      piece together the key and avoid disturbing the continued parsing. Patch submitted by
      Stephan Lau.
    - Cosmetic change to the entry type label to the left in the entry editor.
    - Changed name handling so a single-entry name without a capital initial letter, such as